# facial_recognition_with_rust

./: Cargo.toml  Dockerfile  LICENSE  MULTIARCH.md  README.md  README_SRC.md  build.rs  build_multiarch.sh  create_test_image.rs  docker-compose.yml  setup.sh  src_structure.txt
.github/workflows/: ci-cd.yml  ci.yml  ci_cd.yml  docker_publish.yml  tests.yml
create_test_image/: Cargo.toml
create_test_image/src/: main.rs
src/: database.rs  face_recognition.rs  lib.rs  main.rs  monitor.rs  opencv_wrapper.rs  photo_db.rs
src/cli/: app.rs  database.rs
src/models/: detection.rs  face.rs  mod.rs
src/processors/: face_detector.rs  image_loader.rs  mod.rs
src/utils/: helpers.rs
tests/: image_test.rs  integration_test.rs
