[package]
name = "facial_recognition_system"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
opencv = { version = "0.90", features = ["contrib", "rgb", "dnn"] }
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
ndarray = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
mongodb = "2.0"
futures = "0.3"
tokio-stream = "0.1"

[[bin]]
name = "facial-recognition-cli"
path = "src/bin/cli.rs"