[package]
name = "facial_recognition"
version = "0.1.0"
edition = "2021"

[dependencies]
# For image processing
image = "0.24"
# For linear algebra operations, useful in ML
ndarray = "0.15"
# For neural network inference (e.g., ONNX models)
# tract = "0.17"

# For command-line argument parsing
clap = { version = "4.0", features = ["derive"] }

# For async operations if needed (e.g., web API)
# tokio = { version = "1.0", features = ["full"] }

# For logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.2"